fixed the problem of zooming out on mobile by changing visibility: visible/hidden to display: flex/none

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
     overflow-x: hidden;
 }
 html {
-    overflow-x: initial;
+    overflow-x: hidden;
 }
 .hover {
     cursor: pointer;
